refactor: Refactored with webserver@v0.0.1, added tests, updated README.md
