# docs/swagger.json
@@ -5,7 +5,7 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "JWT authorization and authentication. User service.",
+        "description": "Authorization service.\nUser service.",
         "title": "Portmonetka authorization \u0026 user service",
         "contact": {},
         "license": {
@@ -16,27 +16,6 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/health": {
-            "get": {
-                "description": "Checks if the service is working properly",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Health"
-                ],
-                "summary": "Check service health",
-                "operationId": "health",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/common.Response"
-                        }
-                    }
-                }
-            }
-        },
         "/login": {
             "post": {
                 "description": "Login by username and password",
@@ -53,7 +32,7 @@
                 "operationId": "login",
                 "parameters": [
                     {
-                        "description": "user login information",
+                        "description": "User login information",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -303,6 +282,9 @@
             "properties": {
                 "data": {},
                 "message": {
+                    "type": "string"
+                },
+                "request_uuid": {
                     "type": "string"
                 }
             }
