# internal/handler/user.go
@@ -38,67 +38,30 @@ func NewUserHandler(services *service.Manager, logger logger.Logger) *UserHandle
 // @Failure 422 {object} common.Response "Unprocessable entity"
 // @Router /users [post]
 func (u UserHandler) CreateUser(c echo.Context) error {
+	requestUuid := c.Get(common.RequestUuidKey).(string)
+
 	userCreateDTO, err := u.bindUserCreateDtoValidate(c)
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, common.Response{
-			Message: err.Error(),
-		})
+		return common.NewValidationError(common.InvalidInputData, err)
 	}
 
 	userId, err := u.userService.CreateUser(userCreateDTO)
-
 	if err != nil {
-		return c.JSON(http.StatusUnprocessableEntity, common.Response{
-			Message: err.Error(),
-		})
+		return common.NewUnprocessableEntityError(common.CannotCreateUser, err)
 	}
 
 	u.logger.Info(logger.LogMessage{
-		Action:  "CreateUser",
-		Message: "User created",
-		UserId:  userId,
+		Action:      "CreateUser",
+		Message:     "User created",
+		UserId:      userId,
+		RequestUuid: requestUuid,
 	})
 
 	return c.JSON(http.StatusCreated, common.Response{
-		Message: "User created",
-		Data:    map[string]any{"userId": *userId},
+		Message:     "User created",
+		Data:        map[string]any{"userId": *userId},
+		RequestUuid: requestUuid,
 	})
-}
-
-// DeleteUser deletes a user by ID.
-//
-// @Tags User
-// @Summary Delete user
-// @Description Deletes user by the provided user ID
-// @ID delete-user
-// @Accept json
-// @Produce json
-// @Param userId path uint64 true "User ID"
-// @Success 204 {string} string "No content"
-// @Failure 400 {object} common.Response "Bad request"
-// @Failure 422 {object} common.Response "Unprocessable entity"
-// @Router /users/{userId} [delete]
-func (u UserHandler) DeleteUser(c echo.Context) error {
-	userId, ok := c.Get("userId").(uint64)
-	if !ok {
-		return c.JSON(http.StatusBadRequest, common.Response{
-			Message: "invalid user id",
-		})
-	}
-
-	if err := u.userService.DeleteUser(userId); err != nil {
-		return c.JSON(http.StatusUnprocessableEntity, common.Response{
-			Message: err.Error(),
-		})
-	}
-
-	u.logger.Info(logger.LogMessage{
-		Action:  "DeleteUser",
-		Message: "User deleted",
-		UserId:  &userId,
-	})
-
-	return c.NoContent(http.StatusNoContent)
 }
 
 // UpdateUserName updates the name of a user.
@@ -117,35 +80,30 @@ func (u UserHandler) DeleteUser(c echo.Context) error {
 // @Failure 422 {object} common.Response "Unprocessable entity"
 // @Router /users/{userId}/username [put]
 func (u UserHandler) UpdateUserName(c echo.Context) error {
-	authorizedUserId, ok := c.Get("userId").(uint64)
-	if !ok {
-		return c.JSON(http.StatusUnauthorized, common.Response{
-			Message: "unauthorized user",
-		})
-	}
+	requestUuid := c.Get(common.RequestUuidKey).(string)
+	userId := c.Get("userId").(uint64)
 
-	userUpdateNameDTO, err := u.bindUserUpdateNameDtoValidate(c, authorizedUserId)
+	userUpdateNameDTO, err := u.bindUserUpdateNameDtoValidate(c, userId)
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, common.Response{
-			Message: err.Error(),
-		})
+		return common.NewValidationError(common.InvalidInputData, err)
 	}
 
 	err = u.userService.UpdateUserName(userUpdateNameDTO)
 	if err != nil {
-		return c.JSON(http.StatusUnprocessableEntity, common.Response{
-			Message: err.Error(),
-		})
+		return common.NewUnprocessableEntityError(common.CannotUpdateUsername, err)
 	}
 
 	u.logger.Info(logger.LogMessage{
-		Action:  "UpdateUserName",
-		Message: "Username updated",
-		UserId:  &authorizedUserId,
+		Action:      "UpdateUserName",
+		Message:     "Username updated",
+		UserId:      &userId,
+		RequestUuid: requestUuid,
 	})
 
 	return c.JSON(http.StatusOK, common.Response{
-		Message: "Username updated",
+		Message:     "Username updated",
+		Data:        map[string]any{"name": userUpdateNameDTO.Name},
+		RequestUuid: requestUuid,
 	})
 }
 
@@ -165,45 +123,70 @@ func (u UserHandler) UpdateUserName(c echo.Context) error {
 // @Failure 422 {object} common.Response "Unprocessable entity"
 // @Router /users/{userId}/password [put]
 func (u UserHandler) UpdateUserPassword(c echo.Context) error {
-	authorizedUserId, ok := c.Get("userId").(uint64)
-	if !ok {
-		return c.JSON(http.StatusUnauthorized, common.Response{
-			Message: "unauthorized user",
-		})
-	}
+	requestUuid := c.Get(common.RequestUuidKey).(string)
+	userId := c.Get("userId").(uint64)
 
-	userUpdatePasswordDTO, err := u.bindUserUpdatePasswordDtoValidate(c, authorizedUserId)
+	userUpdatePasswordDTO, err := u.bindUserUpdatePasswordDtoValidate(c, userId)
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, common.Response{
-			Message: err.Error(),
-		})
+		return common.NewValidationError(common.InvalidInputData, err)
 	}
 
 	err = u.userService.UpdateUserPassword(userUpdatePasswordDTO)
 	if err != nil {
-		return c.JSON(http.StatusUnprocessableEntity, common.Response{
-			Message: err.Error(),
-		})
+		return common.NewUnprocessableEntityError(common.CannotUpdatePassword, err)
 	}
 
 	u.logger.Info(logger.LogMessage{
-		Action:  "UpdateUserPassword",
-		Message: "User password updated",
-		UserId:  &authorizedUserId,
+		Action:      "UpdateUserPassword",
+		Message:     "User password updated",
+		UserId:      &userId,
+		RequestUuid: requestUuid,
 	})
 
 	return c.JSON(http.StatusOK, common.Response{
-		Message: "User password updated",
+		Message:     "User password updated",
+		RequestUuid: requestUuid,
 	})
+}
+
+// DeleteUser deletes a user by ID.
+//
+// @Tags User
+// @Summary Delete user
+// @Description Deletes user by the provided user ID
+// @ID delete-user
+// @Accept json
+// @Produce json
+// @Param userId path uint64 true "User ID"
+// @Success 204 {string} string "No content"
+// @Failure 400 {object} common.Response "Bad request"
+// @Failure 422 {object} common.Response "Unprocessable entity"
+// @Router /users/{userId} [delete]
+func (u UserHandler) DeleteUser(c echo.Context) error {
+	requestUuid := c.Get(common.RequestUuidKey).(string)
+	userId := c.Get("userId").(uint64)
+
+	if err := u.userService.DeleteUser(userId); err != nil {
+		return common.NewUnprocessableEntityError(common.CannotDeleteUser, err)
+	}
+
+	u.logger.Info(logger.LogMessage{
+		Action:      "DeleteUser",
+		Message:     "User deleted",
+		UserId:      &userId,
+		RequestUuid: requestUuid,
+	})
+
+	return c.NoContent(http.StatusNoContent)
 }
 
 func (u UserHandler) bindUserCreateDtoValidate(c echo.Context) (*model.UserCreateDTO, error) {
 	userCreateDTO := new(model.UserCreateDTO)
 	if err := c.Bind(userCreateDTO); err != nil {
-		return nil, common.InvalidUserData
+		return nil, err
 	}
 	if err := u.validate.Struct(userCreateDTO); err != nil {
-		return nil, common.InvalidUserData
+		return nil, err
 	}
 	return userCreateDTO, nil
 }
@@ -211,10 +194,10 @@ func (u UserHandler) bindUserCreateDtoValidate(c echo.Context) (*model.UserCreat
 func (u UserHandler) bindUserUpdateNameDtoValidate(c echo.Context, userId uint64) (*model.UserUpdateNameDTO, error) {
 	userUpdateNameDTO := new(model.UserUpdateNameDTO)
 	if err := c.Bind(userUpdateNameDTO); err != nil {
-		return nil, common.InvalidUserData
+		return nil, err
 	}
 	if err := u.validate.Struct(userUpdateNameDTO); err != nil {
-		return nil, common.InvalidUserData
+		return nil, err
 	}
 	userUpdateNameDTO.Id = userId
 	return userUpdateNameDTO, nil
@@ -223,10 +206,10 @@ func (u UserHandler) bindUserUpdateNameDtoValidate(c echo.Context, userId uint64
 func (u UserHandler) bindUserUpdatePasswordDtoValidate(c echo.Context, userId uint64) (*model.UserUpdatePasswordDTO, error) {
 	userUpdatePasswordDTO := new(model.UserUpdatePasswordDTO)
 	if err := c.Bind(userUpdatePasswordDTO); err != nil {
-		return nil, common.InvalidUserData
+		return nil, err
 	}
 	if err := u.validate.Struct(userUpdatePasswordDTO); err != nil {
-		return nil, common.InvalidUserData
+		return nil, err
 	}
 	userUpdatePasswordDTO.Id = userId
 	return userUpdatePasswordDTO, nil
